# libcbor

./: CMakeLists.txt
src/: CMakeLists.txt  amalgamate.py
